editing and adding

--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-		<link href="css/main.css" rel="stylesheet">
+ 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400" rel="stylesheet">
+		<link href="main.css" rel="stylesheet">
 
 		<title>bun bun bake shop</title>
 	</head>
 	
 	<body>
-	<div id="container">
-		<div id="nav">
-			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="menu.html">MENU</a></li>
-				<li><a href="">ABOUT</a></li>
-				<li><a href="">CONTACT</a></li>
-				<li><a href="">&#xf291;</a></li>
-			</ul>
-		</div>
+	<div id="hero">
+		<div class="container">
+			<div class="nav">
+				<a href="index.html"><img src="images/bblogo.png"></a>
+				<div class="border">
+				</div>
+				<ul>
+					<li><a href="">HOME</a></li>
+					<li><a href="menu.html">MENU</a></li>
+					<li><a href="">ABOUT</a></li>
+					<li><a href="">CONTACT</a></li>
+					<li><a href=""><img src="images/basket.png"></a></li>
+				</ul>
+			</div>
 
-		<div class="hero">
 			<div class="header">
-			<div class="lead">BUN BUN BAKE SHOP</span>
-			<br>
-			<div class="subtitle"><a href="">come eat our buns &#xf178;</a></span>
+				<div class="lead">
+					BUN BUN BAKE SHOP
+				</div>
+				<div class="subtitle">
+					<a href="">come eat our buns<img src="images/arrow.png"></a>
+				</div>
 			</div>
 		</div>
-
-		<div id="footer">
-		© 2017 Bun Bun Bake Shop
-		</div>
+				<div class="footer">
+			© 2017 Bun Bun Bake Shop
+			</div>
 	</div>
 	</body>
 </html>
