--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
-    	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet">
 
 		<title>bun bun bake shop</title>
