--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
- 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400" rel="stylesheet">
+ 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
 
 		<title>bun bun bake shop</title>
@@ -10,11 +10,11 @@
 	<body>
 	<div id="hero">
 		<div class="container">
-			<div class="nav">
-				<a href="index.html"><img src="images/bblogo.png"></a>
+			<div class="header">
+				<a href="index.html"><img src="images/bblogo-white.svg"></a>
 				<div class="border">
 				</div>
-				<ul>
+				<ul class="navigation">
 					<li><a href="">HOME</a></li>
 					<li><a href="menu.html">MENU</a></li>
 					<li><a href="">ABOUT</a></li>
@@ -22,13 +22,12 @@
 					<li><a href=""><img src="images/basket.png"></a></li>
 				</ul>
 			</div>
-
-			<div class="header">
+			<div class="headline">
 				<div class="lead">
 					BUN BUN BAKE SHOP
 				</div>
 				<div class="subtitle">
-					<a href="">come eat our buns<img src="images/arrow.png"></a>
+					<a href=""><span>come eat our buns</span><img src="images/arrow.png" hspace="10"></a>
 				</div>
 			</div>
 		</div>
