changed type sizes

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 				<div class="border">
 				</div>
 				<ul class="navigation">
-					<li><a href="">HOME</a></li>
-					<li><a href="menu.html">MENU</a></li>
-					<li><a href="">ABOUT</a></li>
-					<li><a href="">CONTACT</a></li>
-					<li><a href=""><img src="images/basket.png"></a></li>
+					<li><a class="one" href="#">home</a></li>
+					<li><a class="one" href="menu.html">menu</a></li>
+					<li><a class="one" href="#">about</a></li>
+					<li><a class="one" href="#">contact</a></li>
+					<li><a class="one" href="#"><img src="images/basket.png"></a></li>
 				</ul>
 			</div>
 			<div class="headline">
@@ -27,7 +27,7 @@
 					BUN BUN BAKE SHOP
 				</div>
 				<div class="subtitle">
-					<a href=""><span>come eat our buns</span><img src="images/arrow.png" hspace="10"></a>
+					<a class="one" href="">come eat our buns<img src="images/arrow.png" hspace="10"></a>
 				</div>
 			</div>
 		</div>
