completed menu.html

--- a/menu.html
+++ b/menu.html
@@ -1,13 +1,54 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400" rel="stylesheet">
-		<link href="css/main.css" rel="stylesheet">
+ 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
+		<link href="main.css" rel="stylesheet">
 
 		<title>bun bun bake shop</title>
 	</head>
 	
 	<body>
-	<div id="container">
-	</div>
+		<div class="container">
+			<div class="header">
+				<a href="index.html"><img src="images/bblogo-black.svg"></a>
+				<div class="border-black">
+				</div>
+				<ul class="navigation">
+					<li><a class="two" href="">home</a></li>
+					<li><a class="two" span style ="font-weight: 500">menu</a></li>
+					<li><a class="two" href="">about</a></li>
+					<li><a class="two" href="">contact</a></li>
+					<li><a class="two" href=""><img src="images/basket-black.png"></a></li>
+				</ul>	
+			</div>
+			<div class="menu">
+				<h2>MENU</h2>
+				<h1>We have the best buns</h1>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat</p>
+				<a class="two" href="#">learn more about our buns<img src="images/blackarrow.png" hspace="10"></a>
+
+				<ul class=products>
+					<li><a href="product1.html"><img src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail" src="#"></a></li>
+					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="footer">
+		© 2017 Bun Bun Bake Shop
+		</div>
 	</body>
 </html>
