set up scaffolding

--- a/product1.html
+++ b/product1.html
@@ -21,30 +21,29 @@
 					<li><a class="two" href=""><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
-			<div class="menu">
-				<h2>MENU</h2>
-				<h1>We have the best buns</h1>
+			<div class="product-image">
+				<img src="#" class="preview">
+			</div>
+			<div class="description">
+				<h1>Original bun</h1>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat</p>
-				<a class="two" href="#">learn more about our buns<img src="images/blackarrow.png" hspace="10"></a>
-
-				<ul class=products>
-					<li><a href="product1.html"><img src="#"></a></li>
+				<span class="price">$3.29</span>
+				<H3>Quantity</H3>
+				<button type="button" class="button minus">-</button>
+				<span class="quantity">1</span>
+				<button type="button" class="button add">+</button>
+				<button type="button">add to cart</button>
+			</div>
+			<div class="border-long">
+			</div>
+			<div class="more">
+			<H2>MORE BUNS TO LOVE</H2>
+			<ul class=products>
+					<li><a href="product2.html"><img src="#"></a></li>
 					<li><a href="#"><img class="thumbnail" src="#"></a></li>
 					<li><a href="#"><img class="thumbnail" src="#"></a></li>
 					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-				</ul>
+			</ul>
 			</div>
 		</div>
 		<div class="footer">
