--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="hero">
 		<div class="container">
 			<div class="header">
-				<a href="index.html"><img src="images/bblogo-white.svg"></a>
+				<a href="index.html"><img class="logo" src="images/bblogo-white.svg"></a>
 				<div class="border">
 				</div>
 				<ul class="navigation">
