--- a/menu.html
+++ b/menu.html
@@ -10,8 +10,8 @@
 	<body>
 		<div class="container">
 			<div class="header">
-				<a href="index.html"><img src="images/bblogo-black.svg"></a>
-				<div class="border-black">
+				<a href="index.html"><img  class="logo" src="images/bblogo-black.svg"></a>
+				<div class="border black">
 				</div>
 				<ul class="navigation">
 					<li><a class="two" href="">home</a></li>
