added final copy

--- a/product1.html
+++ b/product1.html
@@ -29,17 +29,17 @@
 				
 				<div class="description">
 					<h1>Original bun</h1>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat</p>
+					<p class=largetext>Nothing beats the original. Our classic recipe, the one that started it all. Warm dough, our locally sourced cinnamon, topped with our housemade rich cream cheese frosting.</p>
 					<span class="price">$3.29</span>
 					<H3>Quantity</H3>
-					<button type="button" class="primary minus">-</button>
+					<button type="button" class="primary">-</button>
 					<span class="quantity">1</span>
-					<button type="button" class="primary add">+</button>
+					<button type="button" class="primary">+</button>
 					<button type="button" class="secondary">add to cart</button>
 					<div class="border short">
 					</div>
 					<H3>Ingredients</H3>
-					<p>ingredient one, two, three, four</p>
+					<p>Flour, Malted Barley Flour, Niacin, Iron, Thiamine Mononitrate, Riboflavin, Folic Acid, Water, Eggs, Butter With Natural Flavor, Margarine, Brown Sugar, Sugar, Leavening (Yeast), Cinnamon, Cream Cheese, Dough Conditioner (Ascorbic Acid), Honey, Natural Vanilla Flavor, Salt, Soybean Oil</p>
 				</div>
 			</div>	
 				
