added hover effect

--- a/menu.html
+++ b/menu.html
@@ -28,22 +28,96 @@
 				<a class="two" href="#">learn more about our buns<img src="images/blackarrow.png" hspace="10"></a>
 
 				<ul class=products>
-					<li><a href="product1.html"><img src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image right">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image right">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image right">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>	
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image right">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>	
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>
+					<div class="image right">
+						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Original Bun</div>
+						</div></a>
+					</div>																						
 				</ul>
 			</div>
 		</div>
