added images to products

--- a/product1.html
+++ b/product1.html
@@ -48,10 +48,24 @@
 				</div>
 				<H2><center>MORE BUNS TO LOVE</center></H2>
 				<ul class=products>
-					<li><a href="product2.html"><img src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail" src="#"></a></li>
-					<li><a href="#"><img class="thumbnail right" src="#"></a></li>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product13.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Lemon Lavendar</div>
+						</div></a>
+					</div>
+					<div class="image">
+						<li><img class="thumbnail" src="images/product9.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Carrot Cake</div>
+						</div></a>
+					</div>
+					<div class="image right">
+						<li><img class="thumbnail" src="images/product4.jpg"></li>
+						<a href="product1.html"><div class="overlay">
+							<div class="text">Maple Apple Pecan</div>
+						</div></a>
+					</div>	
 				</ul>
 				</div>
 			</div>
