--- a/menu.html
+++ b/menu.html
@@ -35,87 +35,87 @@
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product2.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Original Bun (Gluten Free)</div>
 						</div></a>
 					</div>
 					<div class="image right">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product3.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Original Bun (Vegan)</div>
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product4.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Maple Apple Pecan</div>
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product5.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Bacon</div>
 						</div></a>
 					</div>
 					<div class="image right">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product6.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Walnut</div>
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product7.jpeg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Pumpkin Spice</div>
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product8.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Caramel Pecan</div>
 						</div></a>
 					</div>
 					<div class="image right">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product9.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Carrot Cake</div>
 						</div></a>
 					</div>	
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product10.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Old Fashion Buttermilk</div>
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product11.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Strawberry Rhubarb</div>
 						</div></a>
 					</div>
 					<div class="image right">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product12.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Birthday Cake</div>
 						</div></a>
 					</div>	
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product13.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Lemon Lavendar</div>
 						</div></a>
 					</div>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product14.jpg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Cranberry</div>
 						</div></a>
 					</div>
 					<div class="image right">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product15.jpeg"></li>
 						<a href="product1.html"><div class="overlay">
-							<div class="text">Original Bun</div>
+							<div class="text">Blackberry</div>
 						</div></a>
 					</div>																						
 				</ul>
