added additional product pages, changed out links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="border">
 				</div>
 				<ul class="navigation">
-					<li><a class="one" href="#">home</a></li>
+					<li><a class="one" href="index.html">home</a></li>
 					<li><a class="one" href="menu.html">menu</a></li>
 					<li><a class="one" href="#">about</a></li>
 					<li><a class="one" href="#">contact</a></li>
