--- a/menu.html
+++ b/menu.html
@@ -14,11 +14,11 @@
 				<div class="border black">
 				</div>
 				<ul class="navigation">
-					<li><a class="two" href="">home</a></li>
+					<li><a class="two" href="index.html">home</a></li>
 					<li><a class="two" span style ="font-weight: 500">menu</a></li>
-					<li><a class="two" href="">about</a></li>
-					<li><a class="two" href="">contact</a></li>
-					<li><a class="two" href=""><img src="images/basket-black.png"></a></li>
+					<li><a class="two" href="#">about</a></li>
+					<li><a class="two" href="#">contact</a></li>
+					<li><a class="two" href="#"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="menu">
@@ -36,85 +36,85 @@
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product2.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="product2.html"><div class="overlay">
 							<div class="text">Original Bun (Gluten Free)</div>
 						</div></a>
 					</div>
 					<div class="image right">
 						<li><img class="thumbnail" src="images/product3.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="product3.html"><div class="overlay">
 							<div class="text">Original Bun (Vegan)</div>
 						</div></a>
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product4.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Maple Apple Pecan</div>
 						</div></a>
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product5.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Bacon</div>
 						</div></a>
 					</div>
 					<div class="image right">
 						<li><img class="thumbnail" src="images/product6.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Walnut</div>
 						</div></a>
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product7.jpeg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Pumpkin Spice</div>
 						</div></a>
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product8.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Caramel Pecan</div>
 						</div></a>
 					</div>
 					<div class="image right">
 						<li><img class="thumbnail" src="images/product9.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Carrot Cake</div>
 						</div></a>
 					</div>	
 					<div class="image">
 						<li><img class="thumbnail" src="images/product10.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Old Fashion Buttermilk</div>
 						</div></a>
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product11.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Strawberry Rhubarb</div>
 						</div></a>
 					</div>
 					<div class="image right">
 						<li><img class="thumbnail" src="images/product12.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Birthday Cake</div>
 						</div></a>
 					</div>	
 					<div class="image">
 						<li><img class="thumbnail" src="images/product13.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Lemon Lavendar</div>
 						</div></a>
 					</div>
 					<div class="image">
 						<li><img class="thumbnail" src="images/product14.jpg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Cranberry</div>
 						</div></a>
 					</div>
 					<div class="image right">
 						<li><img class="thumbnail" src="images/product15.jpeg"></li>
-						<a href="product1.html"><div class="overlay">
+						<a href="#"><div class="overlay">
 							<div class="text">Blackberry</div>
 						</div></a>
 					</div>																						
