changed nav link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					BUN BUN BAKE SHOP
 				</div>
 				<div class="subtitle">
-					<a class="one" href="">come eat our buns<img src="images/arrow.png" hspace="10"></a>
+					<a class="one" href="menu.html">come eat our buns<img src="images/arrow.png" hspace="10"></a>
 				</div>
 			</div>
 		</div>
