added final copy

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
 			<div class="menu">
 				<h2>MENU</h2>
 				<h1>We have the best buns</h1>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat</p>
+				<p>From ​​our ​​famous ​​classic ​​cinnamon ​​roll​ ​to ​​a​​ variety​​ of ​artisan​​ flavors, Bun Bun Bakery Shop is the place to go for your cinnamon bun cravings. When a birthday cake just doesn't cut it anymore, make your way to a dozen cinnamon bun order to share. Made with care and love, you can expect our buns to delight! </p>
 				<a class="two" href="#">learn more about our buns<img src="images/blackarrow.png" hspace="10"></a>
 
 				<ul class=products>
