--- a/product1.html
+++ b/product1.html
@@ -3,6 +3,7 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
+		<script src="main.js"></script>
 
 		<title>bun bun bake shop</title>
 	</head>
