--- a/product3.html
+++ b/product3.html
@@ -3,6 +3,8 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
+		<script src="main.js"></script>
+
 
 		<title>bun bun bake shop</title>
 	</head>
