changes to accomodate js functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li><a class="one" href="menu.html">menu</a></li>
 					<li><a class="one" href="#">about</a></li>
 					<li><a class="one" href="#">contact</a></li>
-					<li><a class="one" href="#"><img src="images/basket.png"></a></li>
+					<li><span id="quantwhite">0</span><a class="one" href="#"><img src="images/basket.png"></a></li>
 				</ul>
 			</div>
 			<div class="headline">
