--- a/menu.html
+++ b/menu.html
@@ -20,12 +20,12 @@
 					<li><a class="two" span style ="font-weight: 500">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
-					<li><a class="two" href="#"><img src="images/basket-black.png"></a></li>
+					<li><span id="quant">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="menu">
-				<h2>MENU</h2>
-				<h1>We have the best buns</h1>
+				<h2>THE BEST BUNS</h2>
+				<h1>Our menu</h1>
 				<p>From ​​our ​​famous ​​classic ​​cinnamon ​​roll​ ​to ​​a​​ variety​​ of ​artisan​​ flavors, Bun Bun Bakery Shop is the place to go for your cinnamon bun cravings. When a birthday cake just doesn't cut it anymore, make your way to a dozen cinnamon bun order to share. Made with care and love, you can expect our buns to delight! </p>
 				<a class="two" href="#">learn more about our buns<img src="images/blackarrow.png" hspace="10"></a>
 
