--- a/product1.html
+++ b/product1.html
@@ -19,7 +19,7 @@
 					<li><a class="two" href="menu.html">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
-					<li><a class="two" href="#"><img src="images/basket-black.png"></a></li>
+					<li><span id="quant">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="overview">
@@ -29,18 +29,50 @@
 				</div>
 				
 				<div class="description">
-					<h1>Original Bun</h1>
+					<h1 id="pageFlavor" data-flavor="og">Original Bun</h1>
 					<p class=largetext>Nothing beats the original. Our classic recipe, the one that started it all. Warm dough, our locally sourced cinnamon, topped with our housemade rich cream cheese frosting.</p>
-					<span class="price">$3.29</span>
 					<H3>Quantity</H3>
-					<button type="button" class="primary">-</button>
-					<span class="quantity">1</span>
-					<button type="button" class="primary">+</button>
-					<button type="button" class="secondary">add to cart</button>
-					<div class="border short">
+					<select id="dropdown">
+						<option value="">Please select</option>
+						<option value="individual">Individual</option>
+						<option value="6pack">6-pack</option>
+						<option value="12pack">12-pack</option>
+					</select>
+					<div id="flavors">
+						<table>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="ogBunGF">Original Bun (Gluten Free)</td>
+								<td><input class="type" type="checkbox" name="flavor" value="ogBunV">Original Bun (Vegan)</td>
+							</tr>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="maple">Maple Apple Pecan</td>
+								<td><input class="type" type="checkbox" name="flavor" value="bacon">Bacon</td>
+							</tr>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="walnut">Walnut</td>
+								<td><input class="type" type="checkbox" name="flavor" value="pumpkin">Pumpkin Spice</td>
+							</tr>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="caramel">Caramel Pecan</td>
+								<td><input class="type" type="checkbox" name="flavor" value="carrot">Carrot Cake</td>
+							</tr>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="oldFashion">Old Fashion Buttermilk</td>
+								<td><input class="type" type="checkbox" name="flavor" value="strawberry">Strawberry Rhubarb</td>
+							</tr>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="birthday">Birthday Cake</td>
+								<td><input class="type" type="checkbox" name="flavor" value="lemon">Lemon Lavender</td>
+							</tr>
+							<tr>
+								<td><input class="type" type="checkbox" name="flavor" value="cranberry">Cranberry</td>
+								<td><input class="type" type="checkbox" name="flavor" value="blackberry">Blackberry</td>
+							</tr>
+						</table>
 					</div>
-					<H3>Ingredients</H3>
-					<p>Flour, Malted Barley Flour, Niacin, Iron, Thiamine Mononitrate, Riboflavin, Folic Acid, Water, Eggs, Butter With Natural Flavor, Margarine, Brown Sugar, Sugar, Leavening (Yeast), Cinnamon, Cream Cheese, Dough Conditioner (Ascorbic Acid), Honey, Natural Vanilla Flavor, Salt, Soybean Oil</p>
+					<div class="border short"></div>
+					<span class="price">$3.29</span>
+					<button type="button" class="secondary">add to cart</button>
 				</div>
 			</div>	
 				
