--- a/product3.html
+++ b/product3.html
@@ -20,7 +20,7 @@
 					<li><a class="two" href="menu.html">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
-					<li><a class="two" href="#"><img src="images/basket-black.png"></a></li>
+					<li><span id="quant">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="overview">
