--- a/cart.html
+++ b/cart.html
@@ -10,20 +10,20 @@
 	</head>
 	
 	<body>
-		<div class="container">
+		<div class="cartContainer">
 			<div class="header">
 				<a href="index.html"><img  class="logo" src="images/bblogo-black.svg"></a>
 				<div class="border black">
 				</div>
 				<ul class="navigation">
 					<li><a class="two" href="index.html">home</a></li>
-					<li><a class="two" span style ="font-weight: 500">menu</a></li>
+					<li><a class="two" href="menu.html">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
 					<li><span id="quant">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
-			<div class="cart">
+			<div id="cart">
 				<h2>CHECKOUT</h2>
 				<h1>Your basket</h1>
 				<div class="border long">
