--- a/product1.html
+++ b/product1.html
@@ -3,7 +3,7 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
-		<script src="main.js"></script>
+		<script src="working.js"></script>
 
 		<title>bun bun bake shop</title>
 	</head>
@@ -34,8 +34,10 @@
 					<H3>Quantity</H3>
 					<select id="dropdown">
 						<option value="">Please select</option>
-						<option value="individual">Individual</option>
+						<option value="single">Single</option>
+						<option value="6single">6-pack, Single</option>
 						<option value="6pack">6-pack</option>
+						<option value="12single">12-pack, Single</option>
 						<option value="12pack">12-pack</option>
 					</select>
 					<div id="flavors">
