Product javascript updates

--- a/product1.html
+++ b/product1.html
@@ -3,8 +3,6 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
-		<script src="working.js"></script>
-
 		<title>bun bun bake shop</title>
 	</head>
 	
@@ -73,7 +71,7 @@
 						</table>
 					</div>
 					<div class="border short"></div>
-					<span class="price">$3.29</span>
+					<span id="price" class="price">$3.29</span>
 					<button type="button" class="secondary">add to cart</button>
 				</div>
 			</div>	
@@ -108,5 +106,7 @@
 		<div class="footer">
 		© 2017 Bun Bun Bake Shop
 		</div>
+		<script src="working.js"></script>
+
 	</body>
 </html>
