--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
-		<script src="main.js"></script>
+		<script src="working.js"></script>
 
 
 		<title>bun bun bake shop</title>
@@ -26,6 +26,7 @@
 			<div id="cart">
 				<h2>CHECKOUT</h2>
 				<h1>Your basket</h1>
+				<div ="yourOrder"></div>
 				<div class="border long">
 				</div>
 			</div>
