fixing js for cart.html

--- a/cart.html
+++ b/cart.html
@@ -3,8 +3,6 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
-		<script src="working.js"></script>
-
 
 		<title>bun bun bake shop</title>
 	</head>
@@ -26,7 +24,7 @@
 			<div id="cart">
 				<h2>CHECKOUT</h2>
 				<h1>Your basket</h1>
-				<div ="yourOrder"></div>
+				<div id="yourOrder"></div>
 				<div class="border long">
 				</div>
 			</div>
@@ -34,5 +32,6 @@
 		<div class="footer">
 		© 2017 Bun Bun Bake Shop
 		</div>
+		<script src="working.js"></script>
 	</body>
 </html>
