--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,7 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
+		<script type="text/javascript">addCart('myOrder'), save('myOrder')</script>
 
 		<title>bun bun bake shop</title>
 	</head>
