--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,6 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
-		<script type="text/javascript">addCart('myOrder'), save('myOrder')</script>
 
 		<title>bun bun bake shop</title>
 	</head>
@@ -35,4 +34,5 @@
 		</div>
 		<script src="working.js"></script>
 	</body>
+	<script type="text/javascript">updateCart()</script>
 </html>
