--- a/product1.html
+++ b/product1.html
@@ -18,7 +18,7 @@
 					<li><a class="two" href="menu.html">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
-					<li><span id="quant">0</span><a class="two" href="cart.html"><img src="images/basket-black.png"></a></li>
+					<li><span id="cart">0</span><a class="two" href="cart.html"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="overview">
@@ -31,7 +31,7 @@
 					<h1 id="pageFlavor" data-flavor="og">Original Bun</h1>
 					<p class=largetext>Nothing beats the original. Our classic recipe, the one that started it all. Warm dough, our locally sourced cinnamon, topped with our housemade rich cream cheese frosting.</p>
 						<div id="moreDescription">
-						<p class=largetext>Sweet, you're ordering a multi-pack! Get one flavor or mix it up and add two more!</p>	
+						<p class=largetext>Sweet, you're ordering a multi-pack! Mix it up and add two more flavors!</p>	
 						</div>				
 					<H3>Quantity</H3>
 					<select id="dropdown">
