--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 				<div class="border">
 				</div>
 				<ul class="navigation">
-					<li><a class="one" href="index.html">home</a></li>
+			        <li><a class="one" href="index.html">home</a></li>
 					<li><a class="one" href="menu.html">menu</a></li>
 					<li><a class="one" href="#">about</a></li>
 					<li><a class="one" href="#">contact</a></li>
-					<li><span id="quantwhite">0</span><a class="one" href="#"><img src="images/basket.png"></a></li>
+					<li><span id="cartwhite">0</span><a class="one" href="#"><img src="images/basket.png"></a></li>
 				</ul>
 			</div>
 			<div class="headline">
