pushing to cart function

--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
 					<li><a class="two" span style ="font-weight: 500">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
-					<li><span id="quant">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
+					<li><span id="cart">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="menu">
