--- a/product1.html
+++ b/product1.html
@@ -28,7 +28,7 @@
 				</div>
 				
 				<div class="description">
-					<h1 id="pageFlavor" data-flavor="og">Original Bun</h1>
+					<h1 id="pageFlavor" data-flavor="Original Bun">Original Bun</h1>
 					<p class=largetext>Nothing beats the original. Our classic recipe, the one that started it all. Warm dough, our locally sourced cinnamon, topped with our housemade rich cream cheese frosting.</p>
 						<div id="moreDescription" style="display:none">
 						<p class=largetext>Sweet, you're ordering a multi-pack! Mix it up and add two more flavors!</p>	
@@ -45,32 +45,32 @@
 					<div id="flavors" style="display:none">
 						<table>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="ogBunGF">Original Bun (Gluten Free)</td>
-								<td><input class="type" type="checkbox" name="flavor" value="ogBunV">Original Bun (Vegan)</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Original Bun (Gluten Free)">Original Bun (Gluten Free)</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Original Bun (Vegan)">Original Bun (Vegan)</td>
 							</tr>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="maple">Maple Apple Pecan</td>
-								<td><input class="type" type="checkbox" name="flavor" value="bacon">Bacon</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Maple Apple Pecan">Maple Apple Pecan</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Bacon">Bacon</td>
 							</tr>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="walnut">Walnut</td>
-								<td><input class="type" type="checkbox" name="flavor" value="pumpkin">Pumpkin Spice</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Walnut">Walnut</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Pumpkin Spice">Pumpkin Spice</td>
 							</tr>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="caramel">Caramel Pecan</td>
-								<td><input class="type" type="checkbox" name="flavor" value="carrot">Carrot Cake</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Caramel Pecan">Caramel Pecan</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Carrot Cake">Carrot Cake</td>
 							</tr>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="oldFashion">Old Fashion Buttermilk</td>
-								<td><input class="type" type="checkbox" name="flavor" value="strawberry">Strawberry Rhubarb</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Old Fashion Buttermilk">Old Fashion Buttermilk</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Strawberry Rhubarb">Strawberry Rhubarb</td>
 							</tr>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="birthday">Birthday Cake</td>
-								<td><input class="type" type="checkbox" name="flavor" value="lemon">Lemon Lavender</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Birthday Cake">Birthday Cake</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Lemon Lavendar">Lemon Lavender</td>
 							</tr>
 							<tr>
-								<td><input class="type" type="checkbox" name="flavor" value="cranberry">Cranberry</td>
-								<td><input class="type" type="checkbox" name="flavor" value="blackberry">Blackberry</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Cranberry">Cranberry</td>
+								<td><input class="type" type="checkbox" name="flavor" value="Blackberry">Blackberry</td>
 							</tr>
 						</table>
 					</div>
