--- a/menu.html
+++ b/menu.html
@@ -3,8 +3,6 @@
 	<head>
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto+Slab:300,400,500" rel="stylesheet">
 		<link href="main.css" rel="stylesheet">
-		<script src="main.js"></script>
-
 
 		<title>bun bun bake shop</title>
 	</head>
@@ -20,18 +18,19 @@
 					<li><a class="two" span style ="font-weight: 500">menu</a></li>
 					<li><a class="two" href="#">about</a></li>
 					<li><a class="two" href="#">contact</a></li>
-					<li><span id="cart">0</span><a class="two" href="#"><img src="images/basket-black.png"></a></li>
+					<li><span id="cart">0</span><a class="two" href="cart.html"><img src="images/basket-black.png"></a></li>
 				</ul>	
 			</div>
 			<div class="menu">
+				<!--Introductory text-->
 				<h2>THE BEST BUNS</h2>
 				<h1>Our menu</h1>
 				<p>From ​​our ​​famous ​​classic ​​cinnamon ​​roll​ ​to ​​a​​ variety​​ of ​artisan​​ flavors, Bun Bun Bakery Shop is the place to go for your cinnamon bun cravings. When a birthday cake just doesn't cut it anymore, make your way to a dozen cinnamon bun order to share. Made with care and love, you can expect our buns to delight! </p>
 				<a class="two" href="#">learn more about our buns<img src="images/blackarrow.png" hspace="10"></a>
-
+				<!--Hoverable image links-->
 				<ul class=products>
 					<div class="image">
-						<li><img class="thumbnail" src="images/product1.jpg"></li>
+						<li><img class="thumbnail" src="images/product1-1.jpeg"></li>
 						<a href="product1.html"><div class="overlay">
 							<div class="text">Original Bun</div>
 						</div></a>
@@ -126,5 +125,6 @@
 		<div class="footer">
 		© 2017 Bun Bun Bake Shop
 		</div>
+		<script src="working.js"></script>
 	</body>
 </html>
