--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
 				<h1>Your basket</h1>
 				<!-- Order array populates in this div -->
 				<div id="yourOrder"></div>
-				<div><p id="checkoutNow">Your order is looking mighty tasty.</p>
+				<div class="cartCheckout"><p id="checkoutNow">Your order is looking mighty tasty.</p>
 				<button id="checkoutButton" type="button" class="secondary">checkout</button>
 				</div>
 			</div>
