changed script to appropriate js file

--- a/cart.html
+++ b/cart.html
@@ -34,7 +34,7 @@
 		<div class="footer">
 		© 2017 Bun Bun Bake Shop
 		</div>
-		<script src="working.js"></script>
+		<script src="main.js"></script>
 	</body>
 	<script type="text/javascript">updateCart(), checkout()</script>
 </html>
