--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 	</div>
 	<!--Javascript loads at end-->
-	<script src="working.js"></script>
+	<script src="main.js"></script>
 	</body>
 </html>
 
