--- a/menu.html
+++ b/menu.html
@@ -125,6 +125,6 @@
 		<div class="footer">
 		© 2017 Bun Bun Bake Shop
 		</div>
-		<script src="working.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
