--- a/product1.html
+++ b/product1.html
@@ -116,6 +116,6 @@
 		© 2017 Bun Bun Bake Shop
 		</div>
 		<!--Javascript loads at end-->
-		<script src="working.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
